--- a/Dp5RemoteNetCore/Dp5RemoteNetCore/DP5RemoteNetCore.csproj
+++ b/Dp5RemoteNetCore/Dp5RemoteNetCore/DP5RemoteNetCore.csproj
@@ -7,6 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Stomp.Net" Version="2.4.0" />
+    <PackageReference Include="Websocket.Client" Version="4.4.43" />
+    <PackageReference Include="WebSocketSharp-netstandard" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
